Fixed up some spacing, added Predictions section

--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -1,25 +1,21 @@
-.input-div {
-	margin-bottom: 5%;
-}
-
-.input {
+.result {
 	background: #eeeeee;
 	border-radius: 20px;
 	width: 100%;
-	height: 80%;
+	height: 100%;
 	color: #212121;
 	font-weight: 500;
 	margin-top: 12px;
 	padding: 15px;
+	text-align: center;
 	font-size: 150%;
 }
 
-.input:focus {
+.result:focus {
 	border-radius: 20px;
 	border: 1px solid #c0c0c0;
 	outline: none !important;
 	box-shadow: 0 0 5px #a8a8a8;
-    font-size: 20px;
 }
 
 .label {
