--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -1,6 +1,6 @@
 .input {
-	width: 500px;
-	height: 10vh;
+	width: 50%;
+	height: 100%;
 }
 
 
