--- a/src/components/UI/Input/RegularInput/RegularInput.module.css
+++ b/src/components/UI/Input/RegularInput/RegularInput.module.css
@@ -1,12 +1,18 @@
+.input-div {
+	margin-bottom: 5%;
+}
+
 .input {
 	background: #eeeeee;
 	border-radius: 20px;
-	width: 500px;
-	height: 10vh;
+	width: 100%;
+	height: 100%;
 	color: #212121;
 	font-weight: 500;
 	margin-top: 12px;
 	padding: 15px;
+	text-align: center;
+	font-size: 150%;
 }
 
 .input:focus {
@@ -14,7 +20,6 @@
 	border: 1px solid #c0c0c0;
 	outline: none !important;
 	box-shadow: 0 0 5px #a8a8a8;
-    font-size: 20px;
 }
 
 .label {
